v1.7.0/01.快速入门/00.introduction.md
---
title: 简介
date: 2021-08-26 16:24:00
permalink: /v1.7.0/quick-start/introduction/
---

Zadig 是 KodeRover 公司基于 Kubernetes 自主设计、研发的开源分布式持续交付 (Continuous Delivery) 产品，具备灵活易用的高并发工作流、面向开发者的云原生环境、高效协同的测试管理、强大免运维的模板库、客观精确的效能洞察等重要特性，为工程师提供统一的协作平面。Zadig 内置了 K8s YAML、Helm Chart、主机等复杂场景最佳实践，适用大规模微服务、高频高质量交付等场景。[接入准备](/v1.7.0/quick-start/prepare/)

我们的目标是通过云原生技术的运用和工程产品赋能，打造极致、高效、愉悦的开发者工作体验，让工程师成为企业创新的核心引擎。

## 业务架构

![业务架构图](./_images/Zadig-Business-Architecture-zh.jpg)

## 核心能力

- **灵活易用的高并发工作流**

  简单配置，可自动生成高并发工作流，多个微服务可并行构建、并行部署、并行测试，大大提升代码验证效率。自定义的工作流步骤，配合人工审核，灵活且可控的保障业务交付质量。

- **面向开发者的云原生环境**

  分钟级创建或复制一套完整的隔离环境，应对频繁的业务变更和产品迭代。基于全量基准环境，快速为开发者提供一套独立的自测环境。一键托管集群资源即可轻松调试已有服务，验证业务代码。

- **高效协同的测试管理**

  便捷对接 Jmeter、Pytest 等主流测试框架，跨项目管理和沉淀 UI、API、E2E 测试用例资产。通过工作流，向开发者提供前置测试验证能力。通过持续测试和质量分析，充分释放测试价值。

- **强大免运维的模板库**

  跨项目共享 K8s YAML 模版、Helm Chart 模版，实现配置的统一化管理。基于一套模板可创建数百微服务，开发工程师少量配置可自助使用，大幅降低运维管理负担。

- **客观精确的效能洞察**

  全面了解系统运行状态，包括集群、项目、环境、工作流，关键过程通过率等数据概览。提供项目维度的构建、测试、部署等客观的效能度量数据，精准分析研发效能短板，促进稳步提升。

## 为谁服务

* #### 开发工程师
    - 基于代码合并请求级别的持续集成，并获得单元测试，代码扫描，耗时和通过率的质量反馈和改进建议
    - 定时器/Webhook 支持自动触发执行工作流，更新集成环境，运行自动化测试，获得详细的质量结果反馈
    - 一键生成独立集成环境，可直连容器云集成环境进行开发、调试、自测

* #### 测试（开发）工程师
    - 测试任务维护和管理，通过工作流执行自动化功能测试，获得相应测试报告
    - 管理/执行一个项目的交付工作流任务，成功执行后，进行版本交付，并获得交付版本的服务配置、镜像信息、代码信息、测试结果等

* #### DevOps 工程师
    - 一个项目可以实现完整的容器化集成环境管理
    - 根据 Branch/Tag 执行发布工作流，版本交付完整信息数据流，不限于需求/代码/工作流/配置的 changelog

* #### 项目管理/产品管理/工程效率管理人员
    - 可以随时将新功能展示给内外部用户 POC
    - 实现对不同客户进行内部交付版本管理和检索
    - 可查看各团队持续集成、持续交付、持续部署等行业效能 DevOps 指标

## 功能介绍

具有产品持续交付、持续测试、持续追踪的全流程能力，包括以下核心功能：

- 产品交付：项目管理、服务管理、工作流、集成环境
- 质量管理：自动化测试管理
- 交付中心：交付物和制品追踪、产品级版本管理
- 集成管理：GitHub/GitLab/Gerrit/CodeHub 集成、内部账号管理、SSO/LDAP/AD 账号、Jira 集成、邮件集成
- 基础组件：Registry 管理、应用与构建依赖管理、对象存储、集群管理、主机管理
- 系统管理：RBAC 权限、操作日志、公告管理
<!-- - 质效中心：质效看板-持续集成、持续交付、持续部署 -->
<!-- - 质效中心：DevOps 洞察 - 构建、测试、持续交付洞察 -->